fixes z-index of preloader

--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -94,7 +94,7 @@ body {
   width: 100%;
   height: 100%;
   background: #fff;
-  z-index: 3;
+  z-index: 6;
 }
 #loader {
   display: block;
